Opened 14 years ago

Closed 14 years ago

Last modified 14 years ago

#5176 closed bug (fixed)

Vision doesn't register its event any more

Reported by: humdinger Owned by: anevilyak
Priority: normal Milestone: R1
Component: Preferences/Sounds Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev34776.

Vision doesn't register its Nick Notification event in the Sounds prefs any more. A few weeks back it still did, so it must be a fairly recent change.

Change History (3)

comment:1 by anevilyak, 14 years ago

Owner: changed from marcusoverhagen to anevilyak

Will look into it...somewhat puzzling though since system_beep() / add_system_beep_event() haven't changed in a long time that I'm aware of.

comment:2 by anevilyak, 14 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev34803, looks like Axel's rewrite of the media server was to blame.

comment:3 by humdinger, 14 years ago

Confirmed. People can again yell at me in Vision. :) Thanks!

Note: See TracTickets for help on using tickets.